--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=Health
 
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
 #???????????
 spring.datasource.url=jdbc:mysql://localhost:3306/health?createDatabaseIfNotExist=true
 spring.datasource.username=root
